Alpplied all styles requests

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>НАМУ</title>
+    <meta name="description" content="Національний художній музей — один із найбільших і найстаріших в Україні. За тривалий період існування в його фондах зібрано унікальну колекцію творів.">
+    <title>Національний художній музей України</title>
     <link
       rel="shortcut icon"
       href="./images/icons/logo.svg"
@@ -21,7 +22,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header page__header" hidden>
+    <header class="header page__header">
       <div class="header__container">
         <div class="header__content">
           <div class="header__menu">
@@ -54,7 +55,7 @@
               </li>
 
               <li class="menu__item">
-                <a href="#about" class="menu__link">Про Нас</a>
+                <a href="#subscription" class="menu__link">Про Нас</a>
               </li>
 
               <li class="menu__item">
@@ -114,7 +115,7 @@
       </div>
     </section>
     <main>
-      <section class="museum page__museum" hidden>
+      <section class="museum page__museum">
         <div class="museum__image">
           <img
             src="./images/background/header.png"
@@ -127,11 +128,9 @@
             <div class="museum__main">
               <h1 class="museum__title">Художній музей</h1>
               <a
-                href="#"
+                href="#events"
                 class="museum__tickets"
-                target="_blank"
-                title="Купити квитки"
-                rel="noopener">
+                title="Купити квитки">
                 <span class="museum__ticket-field">КВИТКИ</span>
                 <span class="museum__ticket-link">
                   <img
@@ -140,16 +139,13 @@
                     alt="Buy tickets">
                 </span>
               </a>
-              <div class="museum__hint">ПОДІЇ</div>
+              <a href="#events" class="museum__hint">ПОДІЇ</a>
             </div>
           </div>
         </div>
       </section>
 
-      <section
-        class="events"
-        id="events"
-        hidden>
+      <section class="events" id="events">
         <div class="events__container">
           <h2 class="events__title">Актуальні події</h2>
           <div class="events__content">
@@ -227,15 +223,42 @@
         </div>
       </section>
 
-      <section
-        class="gallery"
-        id="gallery" hidden>
+      <section class="gallery" id="gallery">
         <div class="gallery__container">
           <div class="gallery__content">
             <h2 class="gallery__title">Галерея</h2>
 
             <div class="gallery__slider slider">
               <ul class="slider__items">
+                <li class="slider__item">
+                  <img
+                    class="slider__image"
+                    src="./images/gallery/gallery1.png"
+                    alt="Жінки в традиційних нарядах"
+                  >
+                </li>
+                <li class="slider__item">
+                  <img
+                    class="slider__image"
+                    src="./images/gallery/gallery2.png"
+                    alt="Село взимку"
+                  >
+                </li>
+                <li class="slider__item">
+                  <img
+                    class="slider__image"
+                    src="./images/gallery/gallery3.png" alt="Прогулянка парком"
+                  >
+                </li>
+                <li class="slider__item">
+                  <img
+                    class="slider__image"
+                    src="./images/gallery/gallery4.png" alt="Відпочинок на морі"
+                  >
+                </li>
+              </ul>
+
+              <ul class="slider__items-desctop">
                 <li class="slider__item">
                   <img
                     class="slider__image"
@@ -274,7 +297,7 @@
         </div>
       </section>
 
-      <section class="subscription" hidden>
+      <section class="subscription" id="subscription">
         <div class="subscription__content">
           <h2 class="subscription__title">Підписка</h2>
           <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
@@ -285,7 +308,7 @@
               name="email"
               class="subscription__field"
               placeholder="Email"
-              autocomplete="off"
+              autocomplete="on"
               required
             >
             <button
@@ -382,6 +405,7 @@
                     target="_blank">
                     вул. М. Грушевського, 6; Київ, 01001
                   </a>
+                  <br>
                   <a
                     href="tel:+38 (044) 278-13-57"
                     class="contacts__address-link">
@@ -407,7 +431,7 @@
             </li>
 
             <li class="contacts__item">
-              <a href="#about" class="contacts__link">Про Нас</a>
+              <a href="#subscription" class="contacts__link">Про Нас</a>
             </li>
 
             <li class="contacts__item">
@@ -415,7 +439,7 @@
             </li>
 
             <li class="contacts__item">
-              <a href="#contacts" class="contacts__link">Контакти</a>
+              <a href="tel:+38 (044) 278-13-57" class="contacts__link">Контакти</a>
             </li>
           </ul>
         </div>
