Header was added

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="icon" href="images/log-fav.svg">
     <link rel="stylesheet" href="./styles/main.scss">
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header" id="home">
+      <div class="header__content">
+        <div class="container">
+          <div class="grid grid--flex">
+            <a class="icon icon__menu" href="#menu"></a>
+
+            <div class="grid__item--tablet-4-5 grid__item--desktop-6-7">
+              <a class="logo" href="#home">
+                NA
+                <br>
+                MU
+              </a>
+            </div>
+
+            <div class="header__empty-box"></div>
+          </div>
+
+          <h1 class="header__title">
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+
+          <div class="grid grid--block">
+            <div class="grid__item--tablet-1-3 grid__item--desktop-3-5">
+              <a class="header__button" href="#contacts">
+                <div class="header__button-text">
+                  КВИТКИ
+                </div>
+                <div class="button">
+                  <svg 
+                    xmlns="http://www.w3.org/2000/svg" 
+                    width="8" 
+                    height="12" 
+                    viewBox="0 0 8 12" 
+                    class="button__img"
+                  >
+                    <path 
+                      d="M0.590088 10.59L5.17009 6L0.590088 1.41L2.00009 0L8.00009 6L2.00009 12L0.590088 10.59Z"
+                    ></path>
+                  </svg>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <a class="header__event-link" href="#events">
+            ПОДІЇ
+          </a>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
