--- a/src/index.html
+++ b/src/index.html
@@ -386,7 +386,7 @@
             class="subscription__form"
             id="form"
             method="get"
-            action="#"
+            action="javascript:void(0);"
           >
             <label for="email" class="info__label">
               <input
