Section subscription was added

--- a/src/index.html
+++ b/src/index.html
@@ -321,6 +321,45 @@
           </div>
         </div>
       </section>
+
+      <section class="subscription">
+        <div class="container">
+          <div class="grid grid--block">
+            <div class="grid__item--tablet-2-5 grid__item--desktop-4-9">
+              <h2 class="page__title page__title--white">
+                Підписка
+              </h2>
+              <p class="subscription__text">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+
+              <form class="form" action="#">
+                <input 
+                  class="form__field" 
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                  required
+                >
+
+                <button class="button button--orange">
+                  <svg 
+                    xmlns="http://www.w3.org/2000/svg" 
+                    width="8" 
+                    height="12" 
+                    viewBox="0 0 8 12" 
+                    class="button__img"
+                  >
+                    <path 
+                      d="M0.590088 10.59L5.17009 6L0.590088 1.41L2.00009 0L8.00009 6L2.00009 12L0.590088 10.59Z"
+                    ></path>
+                  </svg>
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module">
       import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js'
