--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     >
 
     <link rel="stylesheet" href="./styles/main.scss">
+
   </head>
   <body class="page__body">
     <header class="header page__section">
@@ -25,7 +26,7 @@
           </a>
           <div class="header__logo">
             <a
-              href="/"
+              href="#"
               class="logo"
             >
               <img
@@ -55,6 +56,7 @@
               </div>
             </a>
           </div>
+          <a href="#events" class="vertical-text"> ПОДІЇ </a>
         </div>
       </div>
     </header>
@@ -80,18 +82,6 @@
                  Галерея
                 </a>
               </li>
-
-              <li class="menu__item">
-                <a
-                  class="menu__link"
-                  href="#events"
-                 >
-                  Виставки та
-                  <br>
-                  події
-                </a>
-              </li>
-
               <li class="menu__item">
                 <a
                   class="menu__link"
@@ -100,11 +90,20 @@
                   Про Нас
                 </a>
               </li>
-
               <li class="menu__item">
                 <a
                   class="menu__link"
-                  href="#contacts"
+                  href="#events"
+                 >
+                  Виставки&nbspта
+                  <br>
+                  події
+                </a>
+              </li>
+              <li class="menu__item">
+                <a
+                  class="menu__link"
+                  href="#contact"
                  >
                   Контакти
                 </a>
@@ -116,15 +115,11 @@
             <div class="schedule__work">
               <div>Графік роботи</div>
               <br>
-              <strong> 12:00 &nbsp — &nbsp 20:00</strong> &nbsp середа
-              <br>
-              <strong> 12:00 &nbsp — &nbsp 20:00</strong> &nbsp четвер
-              <br>
-              <strong> 12:00 &nbsp — &nbsp 20:00</strong> &nbsp п’ятниця
-              <br>
-              <strong>11:00 &nbsp — &nbsp 19:00 </strong> &nbsp субота
-              <br>
-              <strong>11:00 &nbsp — &nbsp 19:00 </strong> &nbsp неділя
+              <p><strong> 12:00 &nbsp — &nbsp 20:00</strong> &nbsp середа</p>
+              <p><strong> 12:00 &nbsp — &nbsp 20:00</strong> &nbsp четвер</p>
+              <p><strong> 12:00 &nbsp — &nbsp 20:00</strong> &nbsp п’ятниця</p>
+              <p><strong>11:00 &nbsp — &nbsp 19:00 </strong> &nbsp субота</p>
+              <p><strong>11:00 &nbsp — &nbsp 19:00 </strong> &nbsp неділя</p>
             </div>
             <div class="schedule schedule__text">
               Вихідні:  понеділок, вівторок
@@ -157,7 +152,7 @@
                     <div> ВИСТАВКА</div>  <strong  class="return__data grid__item  grid__item--desktop-10-11">26.08-29.11.2019</strong>
                   </div>
                   <div class="return__title">
-                    <h3>Йду&nbspі&nbspповертаюсь</h3>
+                    <h3>Йду і повертаюсь</h3>
                     <div class="return-point"></div>
                   </div>
                   <p>
@@ -188,7 +183,7 @@
                     <div> ВИСТАВКА</div>  <strong  class="return__data grid__item  grid__item--desktop-10-11">26.08-29.11.2019</strong>
                   </div>
                   <div class="return__title">
-                    <h3>  І&nbspспогади&nbspі&nbspмрії</h3>
+                    <h3>  І спогади і мрії</h3>
                     <div class="return-point"></div>
                   </div>
                   <p>
@@ -225,10 +220,50 @@
       </section>
       <section class="page__section gallery" id="gallery">
         <div class="container">
-          <h2 class="page__section-title " >
+          <h2 class="page__section-title" >
             Галерея
           </h2>
-          <div class="gallery__place grid--gallery">
+
+
+          <div class="swiper">
+
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="./images/gallery1.png" alt="photo1">
+              </div>
+              <div class="swiper-slide">
+                <img src="./images/gallery2.png" alt="photo2">
+              </div>
+              <div class="swiper-slide">
+                <img src="./images/gallery3.png" alt="photo3">
+              </div>
+              <div class="swiper-slide">
+                <img src="./images/gallery4.png" alt="photo4">
+              </div>
+
+            </div>
+
+            <div class="swiper__bullet">
+              <span class="swiper__item swiper__item--active"></span>
+              <span class="swiper__item"></span>
+              <span class="swiper__item"></span>
+              <span class="swiper__item"></span>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+            <!-- If we need scrollbar -->
+            <div class="swiper-scrollbar"></div>
+          </div>
+
+
+
+
+          <div class="gallery__place">
             <div class="gallery__photos">
               <div class="grid">
                 <div class="grid__item  grid__item--desktop-1-4">
@@ -285,171 +320,189 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </div>
         <div class="subscription__field">
-          <input
-            name="email"
-            placeholder="E-mail"
-            type="email"
-            class="subscription__field form-field"
-            required
+          <form
+            class="form"
+            action=" "
+            method = "get"
           >
-          <div class="button__ticket--arroworange">
-            <img
+            <input
+              name="email"
+              placeholder="E-mail"
+              type="email"
+              class="subscription__field form-field"
+              required
+            >
+            <button type="submit" class="button__ticket--arroworange">
+              <img
               class="button__img"
               src="./images/Vecto.png"
               alt="arrow icon"
             >
-          </div>
+            </button>
+          </form>
+
+
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="grid  grid--tabdesktop">
-        <div class="grid__item  grid__item--tablet-1-2 grid__item--desktop-1-2">
-          <a
-            href="/"
-            class="logo"
-          >
-            <img
-              class="logo__img"
-              src="./images/NA MU.svg"
-              alt="NAMU"
-            >
-          </a>
-          <div class="p">
+      <div class="container">
+        <div class="grid">
+          <div class="footer__img grid__item grid__item--mono-1-2 grid__item--tablet-1-1 grid__item--desktop-1-1">
             <a
-              href="/"
+              href="#"
               class="logo"
             >
               <img
-                class="logo__imgface"
-                src="./images/Facebook.svg"
-                alt="facebook"
+                class="logo__img"
+                src="./images/NA MU.svg"
+                alt="NAMU"
               >
             </a>
-            <a
-              href="/"
-              class="logo"
-            >
-              <img
-                class="logo_imgins"
-                src="./images/instagram.svg"
-                alt="instagram"
+            <div class="footer__element">
+              <a
+                href="https://www.facebook.com/"
+                class="logo"
               >
-            </a>
-
-
+                <img
+                  class="logo__imgface"
+                  src="./images/Facebook.svg"
+                  alt="facebook"
+                >
+              </a>
+              <a
+                href="https://www.instagram.com/"
+                class="logo"
+              >
+                <img
+                  class="logo_imgins"
+                  src="./images/instagram.svg"
+                  alt="instagram"
+                >
+              </a>
+            </div>
           </div>
-
-        </div>
-        <div class="grid__item  grid__item--tablet-2-3 grid__item--desktop-3-4">
-          <div>Графік роботи</div>
-          <br>
-          <strong> 12:00 &nbsp — &nbsp 20:00</strong> &nbsp середа
-          <br>
-          <strong> 12:00 &nbsp — &nbsp 20:00</strong> &nbsp четвер
-          <br>
-          <strong> 12:00 &nbsp — &nbsp 20:00</strong> &nbsp п’ятниця
-          <br>
-          <strong>11:00 &nbsp — &nbsp 19:00 </strong> &nbsp субота
-          <br>
-          <strong>11:00 &nbsp — &nbsp 19:00 </strong> &nbsp неділя
-          <br>
-          <div>
-            <strong> Вихідні:</strong>  понеділок, вівторок
+          <div class="grid__item grid__item--mono-1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <div class="footer__work">Графік роботи</div>
             <br>
-            Каса припиняє роботу за 1 годину
-            до закриття музею
-          </div>
-        </div>
-
-        <div class="grid__item  grid__item--tablet-4-5 grid__item--desktop-5-6">
-          <div class="contact" id="contact">
-            <div>Контакти:</div>
+            <strong> 12:00 &nbsp — &nbsp 20:00</strong>
+            &nbsp середа
             <br>
-            <a
-              href="https://goo.gl/maps/Dc8Ju5xKtqUrN9DP9"
-              target="_blank"
-              class="contact__info-link"
-            >
-              вул. М. Грушевського, 6; Київ, 01001
-            </a>
-            <div class="contact__info">
-              тел.
-              <a
-                href="tel:+38 (044) 278-13-57"
-                class="contact__info-link"
-              >
-                +38 (044) 278-13-57
-              </a>
-
-            </div>
-            <div class="contact__info">
-              факс
-              <a
-                href="tel:+38 (044) 278-74-54"
-                class="contact__info-link"
-              >
-                +38 (044) 278-74-54
-              </a>
-            </div>
-            <div class="contact__info">
-              e-mail:
-              <a
-                href="mailto:info@namu.kiev.ua"
-                class="contact__info-link"
-              >
-              info@namu.kiev.ua
-              </a>
+            <strong> 12:00 &nbsp — &nbsp 20:00</strong>&nbsp
+             четвер
+            <br>
+            <strong> 12:00 &nbsp — &nbsp 20:00</strong>
+            &nbsp п’ятниця
+            <br>
+            <strong>11:00 &nbsp — &nbsp 19:00</strong>
+            &nbsp субота
+            <br>
+            <strong>11:00 &nbsp — &nbsp 19:00 </strong>
+            &nbsp неділя
+            <br>
+            <div class="footer__day">
+              <strong>Вихідні:</strong>&nbspпонеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
             </div>
           </div>
+
+          <div class="grid__item grid__item--mono-2-2  grid__item--tablet-4-5 grid__item--desktop-5-6">
+            <div class="contact" id="contact">
+              <div>Контакти:</div>
+              <br>
+              <a
+                href="https://goo.gl/maps/Dc8Ju5xKtqUrN9DP9"
+                target="_blank"
+                class="contact__info-link"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <div class="contact__info">
+                тел.
+                <a
+                  href="tel:+38 (044) 278-13-57"
+                  class="contact__info-link"
+                >
+                  +38 (044) 278-13-57
+                </a>
+
+              </div>
+              <div class="contact__info">
+                факс
+                <a
+                  href="tel:+38 (044) 278-74-54"
+                  class="contact__info-link"
+                >
+                  +38 (044) 278-74-54
+                </a>
+              </div>
+              <div class="contact__info">
+                e-mail:
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="contact__info-link"
+                >
+                info@namu.kiev.ua
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="footer__up grid__item--mono-2-2"> <a href="#" class="footer__up--icon"></a> </div>
+          <div class="grid__item  grid__item--mono-1-2 grid__item--tablet-2-4 grid__item--desktop-8-12">
+
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a
+                  class="footer__link"
+                  href="#gallery"
+                 >
+                 Галерея
+                </a>
+              </li>
+
+              <li class="footer__item">
+                <a
+                  class="footer__link"
+                  href="#events"
+                 >
+                  Виставки та
+                  <br>
+                  події
+                </a>
+              </li>
+
+              <li class="footer__item">
+                <a
+                  class="footer__link"
+                  href="#romanticism"
+                 >
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="footer__item">
+                <a
+                  class="footer__link"
+                  href="#contacts"
+                 >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="grid__item  grid__item--tablet-2-3 grid__item--desktop-8-10">
 
-          <ul class="footer__list">
-            <li class="footer__item">
-              <a
-                class="footer__link"
-                href="#gallery"
-               >
-               Галерея
-              </a>
-            </li>
-
-            <li class="footer__item">
-              <a
-                class="footer__link"
-                href="#events"
-               >
-                Виставки та
-                <br>
-                події
-              </a>
-            </li>
-
-            <li class="footer__item">
-              <a
-                class="footer__link"
-                href="#romanticism"
-               >
-                Про Нас
-              </a>
-            </li>
-
-            <li class="footer__item">
-              <a
-                class="footer__link"
-                href="#contacts"
-               >
-                Контакти
-              </a>
-            </li>
-          </ul>
+        <div class="footer__bootomtext">
+          <div class="footer__bootomtext1">Designed by Zhyriada Marina</div>
+          <div class="footer__bootomtext2">Copyright © 2019. All Rights Reserved.</div>
         </div>
 
       </div>
-
     </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
+
   </body>
 </html>
