--- a/src/index.html
+++ b/src/index.html
@@ -235,7 +235,7 @@
         </div>
       </section>
 
-      <section class="page__section-gallery gallery">
+      <section class="page__section-gallery gallery" id="gallery">
         <div class="container">
           <h2 class="page__title">
             Галерея
@@ -361,6 +361,210 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="grid">
+          <div class="grid__item--1-2 grid__item--tablet-1-1 grid__item--desktop-1-2">
+            <div class="footer__icon">
+              <a class="logo logo--footer" href="#home">
+                NA
+                <br>
+                MU
+              </a>
+              <div class="footer__icon-social">
+                <a 
+                  class="icon icon__social" 
+                  href="https://www.facebook.com/"
+                  target="blank"
+                >
+                  <svg 
+                    xmlns="http://www.w3.org/2000/svg" 
+                    width="24" 
+                    height="24" 
+                    viewBox="0 0 24 24"
+                  >
+                    <g clip-path="url(#clip0_320_220)">
+                      <path
+                        d="M8.80699 4.64899C8.80699 5.2538 8.80699 7.9533 8.80699 7.9533H6.38992V11.9938H8.80699V24.0009H13.7722V11.9942H17.104C17.104 11.9942 17.4161 10.0568 17.5673 7.93841C17.1337 7.93841 13.7909 7.93841 13.7909 7.93841C13.7909 7.93841 13.7909 5.58776 13.7909 5.17573C13.7909 4.76282 14.3323 4.2074 14.8674 4.2074C15.4014 4.2074 16.5286 4.2074 17.5726 4.2074C17.5726 3.65727 17.5726 1.75647 17.5726 0.000976577C16.1789 0.000976577 14.5933 0.000976577 13.8944 0.000976577C8.68426 0.000697581 8.80699 4.04524 8.80699 4.64899Z"
+                      ></path>
+                    </g>
+                    <defs>
+                      <clippath id="clip0_320_220">
+                        <rect 
+                          width="24" 
+                          height="24" 
+                          fill="white"
+                        ></rect>
+                      </clippath>
+                    </defs>
+                  </svg>
+                </a>
+
+                <a 
+                  href="https://www.instagram.com/" 
+                  target="_blank" 
+                  class="icon icon__social"
+                >
+                  <svg 
+                    xmlns="http://www.w3.org/2000/svg" 
+                    width="24" 
+                    height="24" 
+                    viewBox="0 0 24 24"
+                  >
+                    <g clip-path="url(#clip0_320_223)">
+                      <path
+                        d="M17.5908 0H6.58397C3.0017 0 0.0874023 2.9143 0.0874023 6.49657V17.5036C0.0874023 21.0857 3.0017 24 6.58397 24H17.591C21.1731 24 24.0874 21.0857 24.0874 17.5036V6.49657C24.0874 2.9143 21.1731 0 17.5908 0V0ZM12.0874 18.5623C8.46886 18.5623 5.52507 15.6185 5.52507 12C5.52507 8.38145 8.46886 5.43767 12.0874 5.43767C15.7059 5.43767 18.6497 8.38145 18.6497 12C18.6497 15.6185 15.7059 18.5623 12.0874 18.5623ZM18.8066 6.98528C17.7373 6.98528 16.8675 6.11553 16.8675 5.04619C16.8675 3.97686 17.7373 3.10693 18.8066 3.10693C19.8759 3.10693 20.7459 3.97686 20.7459 5.04619C20.7459 6.11553 19.8759 6.98528 18.8066 6.98528Z">
+                      </path>
+                      <path
+                        d="M12.0874 6.84473C9.24487 6.84473 6.93207 9.15734 6.93207 12.0001C6.93207 14.8426 9.24487 17.1554 12.0874 17.1554C14.9301 17.1554 17.2427 14.8426 17.2427 12.0001C17.2427 9.15734 14.9301 6.84473 12.0874 6.84473Z">
+                      </path>
+                      <path
+                        d="M18.8066 4.51416C18.5133 4.51416 18.2745 4.75293 18.2745 5.04626C18.2745 5.3396 18.5133 5.57837 18.8066 5.57837C19.1001 5.57837 19.3389 5.33978 19.3389 5.04626C19.3389 4.75275 19.1001 4.51416 18.8066 4.51416Z">
+                      </path>
+                    </g>
+                    <defs>
+                      <clippath id="clip0_320_223">
+                        <rect 
+                          width="24" 
+                          height="24" 
+                          fill="white"
+                        ></rect>
+                      </clippath>
+                    </defs>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <div class="work-time work-time--footer">
+              <h3 class="work-time__title">
+                Графік роботи
+              </h3>
+              <div class="work-time__section work-time__section--footer">
+                <ul>
+                  <li>
+                    <strong>12:00 — 20:00</strong> середа
+                  </li>
+                  <li>
+                    <strong>12:00 — 20:00</strong> четвер
+                  </li>
+                  <li>
+                    <strong>12:00 — 20:00</strong> п’ятниця
+                  </li>
+                  <li>
+                    <strong>11:00 — 19:00</strong> субота
+                  </li>
+                  <li>
+                    <strong>11:00 — 19:00</strong> неділя
+                  </li>
+                </ul>
+                <p class="work-time__section-week--footer">
+                  <strong>Вихідні:</strong> понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину <span>до закриття музею</span>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
+            <div class="contacts" id="contacts">
+              <div class="contacts__title">
+                Контакти:
+              </div>
+              <ul>
+                <li>
+                  <a 
+                    class="contacts__link" 
+                    href="https://goo.gl/maps/PMxV8NqaA4hKiqgA9"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </li>
+
+                <li>
+                  <a class="contacts__link" href="tel: +38 (044) 278-13-57">
+                    тел. +38 (044) 278&#8209;13&#8209;57
+                  </a>
+                </li>
+
+                <li>
+                  <a class="contacts__link" href="fax: +38 (044) 278-74-54">
+                    факс +38 (044) 278&#8209;74&#8209;54
+                  </a>
+                </li>
+
+                <li>
+                  <a class="contacts__link" href="mailto: info@namu.kiev.ua">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7">
+            <div class="line line--footer"></div>
+          </div>
+
+          <div class="grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
+            <div class="nav__item nav__item--footer">
+              <a class="nav__link nav__link--footer" href="#gallery">
+                Галерея
+              </a>
+              <a class="nav__link nav__link--footer" href="#events">
+                Виставки та події
+              </a>
+            </div>
+          </div>
+
+          <div class="grid__item--2-2 grid__item--tablet-4-4 grid__item--desktop-10-10">
+            <div class="nav__item nav__item--footer">
+              <a class="nav__link nav__link--footer" href="#home">
+                Про Нас
+              </a>
+              <a class="nav__link nav__link--footer" href="#contacts">
+                Контакти
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__designed">
+          <p>
+            Copyright © 2022. All Rights Reserved.
+          </p>
+          <p>
+            Designed by Zhyriada Marina
+          </p>
+        </div>
+
+        <div class="footer__go-top">
+          <a href="#home">
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              width="50" 
+              height="50" 
+              viewBox="0 0 50 50" 
+              fill="none"
+            >
+              <circle 
+                cx="25" 
+                cy="25" 
+                r="24.5" 
+                stroke="#1A5A4C"
+              ></circle>
+              <path 
+                d="M25 19L20 24L20.705 24.705L24.5 20.915V31H25.5V20.915L29.295 24.705L30 24L25 19Z" fill="#1A5A4C"
+              ></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </footer>
     <script type="module">
       import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js'
 
