Applied all remarks

--- a/src/index.html
+++ b/src/index.html
@@ -423,6 +423,12 @@
                   </a>
                 </address>
               </div>
+              <a href="#" class="contacts__top-btn">
+                <img
+                src="./images/icons/contacts-arrow.svg"
+                alt="Повернутися на головну сторінку"
+                class="contacts__top-img">
+              </a>
             </div>
           </div>
           <ul class="contacts__list">
