Museum Landing header and footer added

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,208 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="../src/images/NAMU_logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top">
+            <a href="#menu" class="icon icon--menu"></a>
+
+            <a href="#" class="logo">
+              <img
+                src="images/NAMU_svg.svg" alt="NAMU"
+                class="logo__image">
+            </a>
+          </div>
+          <div class="header__bg"></div>
+          <div class="grid">
+            <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-1-5">
+              <h1 class="header__title">
+                ХУДОЖНІЙ
+                <br>
+                МУЗЕЙ
+              </h1>
+            </div>
+            <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-3-5">
+              <a href="#" class="header__button">
+                КВИТКИ
+              </a>
+            </div>
+            <div class="grid__item grid__item--desktop-1-1">
+              <a href="#" class="header__link">ПОДІЇ
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="grid">
+            <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-2-5">
+              <div class="menu__section">
+                <a href="#" class="icon icon--cross"
+                  >
+                </a>
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a href="#gallery" class="menu__link">Галерея</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#events" class="menu__link">Виставки та події</a>
+                  </li>
+                </ul>
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a href="#about-us" class="menu__link">Про Нас</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#contacts" class="menu__link">Контакти</a>
+                  </li>
+                </ul>
+                <div class="menu__line"></div>
+              </div>
+            </div>
+            <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-8-11">
+              <div class="menu__schedule schedule">
+                <div class="schedule__title schedule__title--menu">Графік роботи</div>
+                <div class="menu_schedule-details">
+                  <ul class="schedule__list schedule__item--menu">
+                    <li class="schedule__item schedule__item--menu">
+                      <strong>12:00 — 20:00</strong> середа
+                    </li>
+                    <li class="schedule__item schedule__item--menu">
+                      <strong>12:00 — 20:00</strong> четвер
+                    </li>
+                    <li class="schedule__item schedule__item--menu">
+                      <strong>12:00 — 20:00</strong> п’ятниця
+                    </li>
+                    <li class="schedule__item schedule__item--menu"> <strong>11:00 — 19:00</strong> субота
+                    </li>
+                    <li class="schedule__item schedule__item--menu">
+                      <strong>11:00 — 19:00
+                      </strong>  неділя
+                    </li>
+                  </ul>
+                  <div class="schedule__day-off schedule__info--menu">
+                    <strong>Вихідні:</strong> понеділок, вівторок
+                    <br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <main class="main">
+      
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="grid">
+          <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-1-1">
+            <div class="footer__icons">
+              <a href="#" class="logo">
+                <img
+                src="./images/NAMU_svg.svg" alt="NAMU">
+              </a>
+              <div class="footer__socials">
+                <a href="#"
+                   class="icon icon--facebook" target="_blank"></a>
+                <a href="#"
+                   class="icon icon--instagram" target="_blank"></a>
+              </div>
+            </div>
+          </div>
+          <div class="grid__item grid__item--mobile-1-1 grid__item--desktop-3-4">
+            <div class="menu__schedule schedule">
+              <div class="schedule__title">Графік роботи</div>
+              <div class="menu_schedule-details">
+                <ul class="schedule__list schedule__item">
+                  <li class="schedule__item">
+                    <strong>12:00 — 20:00</strong> середа
+                  </li>
+                  <li class="schedule__item">
+                    <strong>12:00 — 20:00</strong> четвер
+                  </li>
+                  <li class="schedule__item">
+                    <strong>12:00 — 20:00</strong> п’ятниця
+                  </li>
+                  <li class="schedule__item"> <strong>11:00 — 19:00</strong> субота
+                  </li>
+                  <li class="schedule__item">
+                    <strong>11:00 — 19:00
+                    </strong>  неділя
+                  </li>
+                </ul>
+                <div class="schedule__day-off schedule__info">
+                  <strong>Вихідні:</strong> понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid__item grid__item--mobile-2-2 grid__item--desktop-5-6">
+            <div class="footer__title" id="#contacts">
+              Контакти:
+            </div>
+            <a href="https://goo.gl/maps/8s2WZAGq6tCY3vh56"
+               class="footer__link"
+               target="_blank"
+            >вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a href="tel:+38 (044) 278-13-57"
+               class="footer__link"
+               target="_blank"
+            >тел. +38 (044) 278-13-57
+            </a>
+            <a href="tel:+38 (044) 278-74-54"
+               class="footer__link"
+               target="_blank"
+            >
+              факс +38 (044) 278-74-54
+            </a>
+            <a href="mailto: info@namu.kiev.ua"
+              class="footer__link"
+              target="_blank"
+            > e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+          <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-7-7">
+            <div class="footer__line"></div>
+          </div>
+          <div class="grid__item grid__item--mobile-1-1 grid__item--desktop-8-9">
+            <a href="#galerry" class="footer__link footer__link-nav"> Галерея</a>
+            <a href="#events" class="footer__link footer__link-nav"> Виставки та події</a>
+          </div>
+          <div class="grid__item grid__item--mobile-2-2 grid__item--desktop-10-11">
+            <a href="#about-us" class="footer__link footer__link-nav"> Про Нас</a>
+            <a href="#contacts" class="footer__link footer__link-nav"> Контакти</a>
+          </div>
+        </div>
+        <div class="footer__copyrights">
+          <p class="footer__copyrights-text">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer__copyrights-text">Designed by Zhyriada Marina</p>
+        </div>
+
+
+      </div>
+    </footer>
   </body>
 </html>
