--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,70 @@
       </div>
     </nav>
     <main class="main">
-      
+      <section class="page__section events" id="events">
+        <div class="container">
+          <h2 class="page__section-title">Актуальні
+            події
+          </h2>
+          <div class="events__event event">
+            <div class="grid grid-event">
+              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-1-7">
+                <img src="./images/photos/actual_1.png" alt="Event 1"
+                class="event__photo">
+              </div>
+              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-9-12">
+                <div class="event__info">
+                  <div class="event__data">
+                    <div class="event__type">ВИСТАВКА
+                    </div>
+                    <div class="event__date">
+                      26.08-29.11.2019
+                    </div>
+                  </div>
+                  <h3 class="event__title">Йду і повертаюсь
+                  </h3>
+                  <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="events__event event">
+            <div class="grid grid-event">
+              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-1-7">
+                <img src="./images/photos/actual_2.png" alt="Event 1"
+                class="event__photo">
+              </div>
+              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-9-12">
+                <div class="event__info">
+                  <div class="event__data">
+                    <div class="event__type">ВИСТАВКА
+                    </div>
+                    <div class="event__date">
+                      26.08-29.11.2019
+                    </div>
+                  </div>
+                  <h3 class="event__title">І спогади і мрії
+                  </h3>
+                  <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="events_event-lecture event">
+          <img src="./images/photos/romantizm.png"
+          alt="Lecture" class="event__photo-lecture">
+          <div class="container">
+            <div class="event__info-lecture">
+              <div class="event__data event__data-lecture">
+                <div class="event__type">ЛЕКЦІЯ</div>
+                <div class="event__date">26/08/2019 - 11:00</div>
+              </div>
+              <h3 class="event__title event__title-lecture">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
