--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NA MU</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/main.css">
     <link rel="website icon" type="svg" 
       href="./images/namu_logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
