Fourth commit after review

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NA MU</title>
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/main.scss">
     <link rel="website icon" type="svg" 
       href="./images/namu_logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -168,7 +168,7 @@
               <img 
                 src="./images/event_1.jpg" 
                 alt="Йду і повертаюсь"
-                class="event__image"
+                class="events__image"
               >
             </div>
             
@@ -215,7 +215,7 @@
               <img 
                 src="./images/event_2.jpg" 
                 alt="І спогади і мрії"
-                class="event__image"
+                class="events__image"
               >
             </div>
 
